// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot when user is logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    hasErrored={[Function]}
    user={
        Object {
            "uid": "5",
            "username": "case",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          id="header-wrap"
          replace={false}
          to={
                    Object {
                              "pathname": "/",
                            }
          }
>
          <img
                    alt="puzzle"
                    className="puzzleicon"
                    src="puzzle.svg"
          />
          <h1
                    className="app-title"
          >
                    Puzzle Swap
          </h1>
</Link>,
        <Link
          replace={false}
          to={
                    Object {
                              "pathname": "/post-puzzle-form",
                            }
          }
>
          <button
                    className="puzzle-post"
          >
                    Post a Puzzle
          </button>
</Link>,
        <nav
          className="header-right"
>
          <p
                    className="username-display"
          >
                    case
          </p>
          <div
                    className="menu-toggle "
                    onClick={[Function]}
          >
                    <span />
          </div>
          <div>
                    <span>
                              case
                    </span>
                    <ul
                              className="menu "
                              onClick={[Function]}
                    >
                              <li>
                                        <Link
                                                  replace={false}
                                                  to={
                                                            Object {
                                                                      "pathname": "/messages",
                                                                    }
                                                  }
                                        >
                                                  <span>
                                                            Messages
                                                  </span>
                                        </Link>
                              </li>
                              <li>
                                        <Link
                                                  onClick={[Function]}
                                                  replace={false}
                                                  to={
                                                            Object {
                                                                      "pathname": "/",
                                                                    }
                                                  }
                                        >
                                                  <span>
                                                            Sign Out
                                                  </span>
                                        </Link>
                              </li>
                    </ul>
          </div>
</nav>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <img
              alt="puzzle"
              className="puzzleicon"
              src="puzzle.svg"
/>,
            <h1
              className="app-title"
>
              Puzzle Swap
</h1>,
          ],
          "id": "header-wrap",
          "replace": false,
          "to": Object {
            "pathname": "/",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "puzzle",
              "className": "puzzleicon",
              "src": "puzzle.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Puzzle Swap",
              "className": "app-title",
            },
            "ref": null,
            "rendered": "Puzzle Swap",
            "type": "h1",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <button
            className="puzzle-post"
>
            Post a Puzzle
</button>,
          "replace": false,
          "to": Object {
            "pathname": "/post-puzzle-form",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Post a Puzzle",
            "className": "puzzle-post",
          },
          "ref": null,
          "rendered": "Post a Puzzle",
          "type": "button",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="username-display"
>
              case
</p>,
            <div
              className="menu-toggle "
              onClick={[Function]}
>
              <span />
</div>,
            <div>
              <span>
                            case
              </span>
              <ul
                            className="menu "
                            onClick={[Function]}
              >
                            <li>
                                          <Link
                                                        replace={false}
                                                        to={
                                                                      Object {
                                                                                    "pathname": "/messages",
                                                                                  }
                                                        }
                                          >
                                                        <span>
                                                                      Messages
                                                        </span>
                                          </Link>
                            </li>
                            <li>
                                          <Link
                                                        onClick={[Function]}
                                                        replace={false}
                                                        to={
                                                                      Object {
                                                                                    "pathname": "/",
                                                                                  }
                                                        }
                                          >
                                                        <span>
                                                                      Sign Out
                                                        </span>
                                          </Link>
                            </li>
              </ul>
</div>,
          ],
          "className": "header-right",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "case",
              "className": "username-display",
            },
            "ref": null,
            "rendered": "case",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span />,
              "className": "menu-toggle ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  case
</span>,
                <ul
                  className="menu "
                  onClick={[Function]}
>
                  <li>
                                    <Link
                                                      replace={false}
                                                      to={
                                                                        Object {
                                                                                          "pathname": "/messages",
                                                                                        }
                                                      }
                                    >
                                                      <span>
                                                                        Messages
                                                      </span>
                                    </Link>
                  </li>
                  <li>
                                    <Link
                                                      onClick={[Function]}
                                                      replace={false}
                                                      to={
                                                                        Object {
                                                                                          "pathname": "/",
                                                                                        }
                                                      }
                                    >
                                                      <span>
                                                                        Sign Out
                                                      </span>
                                    </Link>
                  </li>
</ul>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "case",
                },
                "ref": null,
                "rendered": "case",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li>
                      <Link
                                            replace={false}
                                            to={
                                                                  Object {
                                                                                        "pathname": "/messages",
                                                                                      }
                                            }
                      >
                                            <span>
                                                                  Messages
                                            </span>
                      </Link>
</li>,
                    <li>
                      <Link
                                            onClick={[Function]}
                                            replace={false}
                                            to={
                                                                  Object {
                                                                                        "pathname": "/",
                                                                                      }
                                            }
                      >
                                            <span>
                                                                  Sign Out
                                            </span>
                      </Link>
</li>,
                  ],
                  "className": "menu ",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        replace={false}
                        to={
                                                Object {
                                                                        "pathname": "/messages",
                                                                      }
                        }
>
                        <span>
                                                Messages
                        </span>
</Link>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <span>
                          Messages
</span>,
                        "replace": false,
                        "to": Object {
                          "pathname": "/messages",
                        },
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Messages",
                        },
                        "ref": null,
                        "rendered": "Messages",
                        "type": "span",
                      },
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        onClick={[Function]}
                        replace={false}
                        to={
                                                Object {
                                                                        "pathname": "/",
                                                                      }
                        }
>
                        <span>
                                                Sign Out
                        </span>
</Link>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <span>
                          Sign Out
</span>,
                        "onClick": [Function],
                        "replace": false,
                        "to": Object {
                          "pathname": "/",
                        },
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Sign Out",
                        },
                        "ref": null,
                        "rendered": "Sign Out",
                        "type": "span",
                      },
                      "type": [Function],
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            id="header-wrap"
            replace={false}
            to={
                        Object {
                                    "pathname": "/",
                                  }
            }
>
            <img
                        alt="puzzle"
                        className="puzzleicon"
                        src="puzzle.svg"
            />
            <h1
                        className="app-title"
            >
                        Puzzle Swap
            </h1>
</Link>,
          <Link
            replace={false}
            to={
                        Object {
                                    "pathname": "/post-puzzle-form",
                                  }
            }
>
            <button
                        className="puzzle-post"
            >
                        Post a Puzzle
            </button>
</Link>,
          <nav
            className="header-right"
>
            <p
                        className="username-display"
            >
                        case
            </p>
            <div
                        className="menu-toggle "
                        onClick={[Function]}
            >
                        <span />
            </div>
            <div>
                        <span>
                                    case
                        </span>
                        <ul
                                    className="menu "
                                    onClick={[Function]}
                        >
                                    <li>
                                                <Link
                                                            replace={false}
                                                            to={
                                                                        Object {
                                                                                    "pathname": "/messages",
                                                                                  }
                                                            }
                                                >
                                                            <span>
                                                                        Messages
                                                            </span>
                                                </Link>
                                    </li>
                                    <li>
                                                <Link
                                                            onClick={[Function]}
                                                            replace={false}
                                                            to={
                                                                        Object {
                                                                                    "pathname": "/",
                                                                                  }
                                                            }
                                                >
                                                            <span>
                                                                        Sign Out
                                                            </span>
                                                </Link>
                                    </li>
                        </ul>
            </div>
</nav>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <img
                alt="puzzle"
                className="puzzleicon"
                src="puzzle.svg"
/>,
              <h1
                className="app-title"
>
                Puzzle Swap
</h1>,
            ],
            "id": "header-wrap",
            "replace": false,
            "to": Object {
              "pathname": "/",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "puzzle",
                "className": "puzzleicon",
                "src": "puzzle.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Puzzle Swap",
                "className": "app-title",
              },
              "ref": null,
              "rendered": "Puzzle Swap",
              "type": "h1",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <button
              className="puzzle-post"
>
              Post a Puzzle
</button>,
            "replace": false,
            "to": Object {
              "pathname": "/post-puzzle-form",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Post a Puzzle",
              "className": "puzzle-post",
            },
            "ref": null,
            "rendered": "Post a Puzzle",
            "type": "button",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="username-display"
>
                case
</p>,
              <div
                className="menu-toggle "
                onClick={[Function]}
>
                <span />
</div>,
              <div>
                <span>
                                case
                </span>
                <ul
                                className="menu "
                                onClick={[Function]}
                >
                                <li>
                                                <Link
                                                                replace={false}
                                                                to={
                                                                                Object {
                                                                                                "pathname": "/messages",
                                                                                              }
                                                                }
                                                >
                                                                <span>
                                                                                Messages
                                                                </span>
                                                </Link>
                                </li>
                                <li>
                                                <Link
                                                                onClick={[Function]}
                                                                replace={false}
                                                                to={
                                                                                Object {
                                                                                                "pathname": "/",
                                                                                              }
                                                                }
                                                >
                                                                <span>
                                                                                Sign Out
                                                                </span>
                                                </Link>
                                </li>
                </ul>
</div>,
            ],
            "className": "header-right",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "case",
                "className": "username-display",
              },
              "ref": null,
              "rendered": "case",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span />,
                "className": "menu-toggle ",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    case
</span>,
                  <ul
                    className="menu "
                    onClick={[Function]}
>
                    <li>
                                        <Link
                                                            replace={false}
                                                            to={
                                                                                Object {
                                                                                                    "pathname": "/messages",
                                                                                                  }
                                                            }
                                        >
                                                            <span>
                                                                                Messages
                                                            </span>
                                        </Link>
                    </li>
                    <li>
                                        <Link
                                                            onClick={[Function]}
                                                            replace={false}
                                                            to={
                                                                                Object {
                                                                                                    "pathname": "/",
                                                                                                  }
                                                            }
                                        >
                                                            <span>
                                                                                Sign Out
                                                            </span>
                                        </Link>
                    </li>
</ul>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "case",
                  },
                  "ref": null,
                  "rendered": "case",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <li>
                        <Link
                                                replace={false}
                                                to={
                                                                        Object {
                                                                                                "pathname": "/messages",
                                                                                              }
                                                }
                        >
                                                <span>
                                                                        Messages
                                                </span>
                        </Link>
</li>,
                      <li>
                        <Link
                                                onClick={[Function]}
                                                replace={false}
                                                to={
                                                                        Object {
                                                                                                "pathname": "/",
                                                                                              }
                                                }
                        >
                                                <span>
                                                                        Sign Out
                                                </span>
                        </Link>
</li>,
                    ],
                    "className": "menu ",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          replace={false}
                          to={
                                                    Object {
                                                                              "pathname": "/messages",
                                                                            }
                          }
>
                          <span>
                                                    Messages
                          </span>
</Link>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <span>
                            Messages
</span>,
                          "replace": false,
                          "to": Object {
                            "pathname": "/messages",
                          },
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Messages",
                          },
                          "ref": null,
                          "rendered": "Messages",
                          "type": "span",
                        },
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          onClick={[Function]}
                          replace={false}
                          to={
                                                    Object {
                                                                              "pathname": "/",
                                                                            }
                          }
>
                          <span>
                                                    Sign Out
                          </span>
</Link>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <span>
                            Sign Out
</span>,
                          "onClick": [Function],
                          "replace": false,
                          "to": Object {
                            "pathname": "/",
                          },
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Sign Out",
                          },
                          "ref": null,
                          "rendered": "Sign Out",
                          "type": "span",
                        },
                        "type": [Function],
                      },
                      "type": "li",
                    },
                  ],
                  "type": "ul",
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should match snapshot when user is not logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    hasErrored={[Function]}
    user={null}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          id="header-wrap"
          replace={false}
          to={
                    Object {
                              "pathname": "/",
                            }
          }
>
          <img
                    alt="puzzle"
                    className="puzzleicon"
                    src="puzzle.svg"
          />
          <h1
                    className="app-title"
          >
                    Puzzle Swap
          </h1>
</Link>,
        null,
        <nav
          className="header-right"
>
          <div
                    className="menu-toggle "
                    onClick={[Function]}
          >
                    <span />
          </div>
          <ul
                    className="menu "
                    onClick={[Function]}
          >
                    <li>
                              <Link
                                        replace={false}
                                        to={
                                                  Object {
                                                            "pathname": "/login",
                                                          }
                                        }
                              >
                                        <span>
                                                  Login
                                        </span>
                              </Link>
                    </li>
                    <li>
                              <Link
                                        replace={false}
                                        to={
                                                  Object {
                                                            "pathname": "/sign-up",
                                                          }
                                        }
                              >
                                        <span>
                                                  Sign Up
                                        </span>
                              </Link>
                    </li>
          </ul>
</nav>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <img
              alt="puzzle"
              className="puzzleicon"
              src="puzzle.svg"
/>,
            <h1
              className="app-title"
>
              Puzzle Swap
</h1>,
          ],
          "id": "header-wrap",
          "replace": false,
          "to": Object {
            "pathname": "/",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "puzzle",
              "className": "puzzleicon",
              "src": "puzzle.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Puzzle Swap",
              "className": "app-title",
            },
            "ref": null,
            "rendered": "Puzzle Swap",
            "type": "h1",
          },
        ],
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <div
              className="menu-toggle "
              onClick={[Function]}
>
              <span />
</div>,
            <ul
              className="menu "
              onClick={[Function]}
>
              <li>
                            <Link
                                          replace={false}
                                          to={
                                                        Object {
                                                                      "pathname": "/login",
                                                                    }
                                          }
                            >
                                          <span>
                                                        Login
                                          </span>
                            </Link>
              </li>
              <li>
                            <Link
                                          replace={false}
                                          to={
                                                        Object {
                                                                      "pathname": "/sign-up",
                                                                    }
                                          }
                            >
                                          <span>
                                                        Sign Up
                                          </span>
                            </Link>
              </li>
</ul>,
          ],
          "className": "header-right",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span />,
              "className": "menu-toggle ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link
                                    replace={false}
                                    to={
                                                      Object {
                                                                        "pathname": "/login",
                                                                      }
                                    }
                  >
                                    <span>
                                                      Login
                                    </span>
                  </Link>
</li>,
                <li>
                  <Link
                                    replace={false}
                                    to={
                                                      Object {
                                                                        "pathname": "/sign-up",
                                                                      }
                                    }
                  >
                                    <span>
                                                      Sign Up
                                    </span>
                  </Link>
</li>,
              ],
              "className": "menu ",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to={
                                        Object {
                                                            "pathname": "/login",
                                                          }
                    }
>
                    <span>
                                        Login
                    </span>
</Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <span>
                      Login
</span>,
                    "replace": false,
                    "to": Object {
                      "pathname": "/login",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Login",
                    },
                    "ref": null,
                    "rendered": "Login",
                    "type": "span",
                  },
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to={
                                        Object {
                                                            "pathname": "/sign-up",
                                                          }
                    }
>
                    <span>
                                        Sign Up
                    </span>
</Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <span>
                      Sign Up
</span>,
                    "replace": false,
                    "to": Object {
                      "pathname": "/sign-up",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sign Up",
                    },
                    "ref": null,
                    "rendered": "Sign Up",
                    "type": "span",
                  },
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            id="header-wrap"
            replace={false}
            to={
                        Object {
                                    "pathname": "/",
                                  }
            }
>
            <img
                        alt="puzzle"
                        className="puzzleicon"
                        src="puzzle.svg"
            />
            <h1
                        className="app-title"
            >
                        Puzzle Swap
            </h1>
</Link>,
          null,
          <nav
            className="header-right"
>
            <div
                        className="menu-toggle "
                        onClick={[Function]}
            >
                        <span />
            </div>
            <ul
                        className="menu "
                        onClick={[Function]}
            >
                        <li>
                                    <Link
                                                replace={false}
                                                to={
                                                            Object {
                                                                        "pathname": "/login",
                                                                      }
                                                }
                                    >
                                                <span>
                                                            Login
                                                </span>
                                    </Link>
                        </li>
                        <li>
                                    <Link
                                                replace={false}
                                                to={
                                                            Object {
                                                                        "pathname": "/sign-up",
                                                                      }
                                                }
                                    >
                                                <span>
                                                            Sign Up
                                                </span>
                                    </Link>
                        </li>
            </ul>
</nav>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <img
                alt="puzzle"
                className="puzzleicon"
                src="puzzle.svg"
/>,
              <h1
                className="app-title"
>
                Puzzle Swap
</h1>,
            ],
            "id": "header-wrap",
            "replace": false,
            "to": Object {
              "pathname": "/",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "puzzle",
                "className": "puzzleicon",
                "src": "puzzle.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Puzzle Swap",
                "className": "app-title",
              },
              "ref": null,
              "rendered": "Puzzle Swap",
              "type": "h1",
            },
          ],
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <div
                className="menu-toggle "
                onClick={[Function]}
>
                <span />
</div>,
              <ul
                className="menu "
                onClick={[Function]}
>
                <li>
                                <Link
                                                replace={false}
                                                to={
                                                                Object {
                                                                                "pathname": "/login",
                                                                              }
                                                }
                                >
                                                <span>
                                                                Login
                                                </span>
                                </Link>
                </li>
                <li>
                                <Link
                                                replace={false}
                                                to={
                                                                Object {
                                                                                "pathname": "/sign-up",
                                                                              }
                                                }
                                >
                                                <span>
                                                                Sign Up
                                                </span>
                                </Link>
                </li>
</ul>,
            ],
            "className": "header-right",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span />,
                "className": "menu-toggle ",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    <Link
                                        replace={false}
                                        to={
                                                            Object {
                                                                                "pathname": "/login",
                                                                              }
                                        }
                    >
                                        <span>
                                                            Login
                                        </span>
                    </Link>
</li>,
                  <li>
                    <Link
                                        replace={false}
                                        to={
                                                            Object {
                                                                                "pathname": "/sign-up",
                                                                              }
                                        }
                    >
                                        <span>
                                                            Sign Up
                                        </span>
                    </Link>
</li>,
                ],
                "className": "menu ",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to={
                                            Object {
                                                                  "pathname": "/login",
                                                                }
                      }
>
                      <span>
                                            Login
                      </span>
</Link>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <span>
                        Login
</span>,
                      "replace": false,
                      "to": Object {
                        "pathname": "/login",
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Login",
                      },
                      "ref": null,
                      "rendered": "Login",
                      "type": "span",
                    },
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to={
                                            Object {
                                                                  "pathname": "/sign-up",
                                                                }
                      }
>
                      <span>
                                            Sign Up
                      </span>
</Link>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <span>
                        Sign Up
</span>,
                      "replace": false,
                      "to": Object {
                        "pathname": "/sign-up",
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sign Up",
                      },
                      "ref": null,
                      "rendered": "Sign Up",
                      "type": "span",
                    },
                    "type": [Function],
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
